fix(printing): Use WebEngine print for rigid, production-grade PDF generation